[package]
name = "blind-oracle-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tfhe = { version = "0.7", features = ["integer", "x86_64-unix"] }
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
bincode = "1"
